feat: protect api/admin with jwt
